<resources>
    <string name="app_name">UP Research</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">Home</string>
    <string name="tim_kirker">Timothy Kirker - 11152402</string>
    <string name="duncan_smallwood">Duncan Smallwood - 13027205</string>
    <string name="priscilla_madigoe">Priscilla Madigoe - 13049128</string>
    <string name="kevin_heritage">Kevin David Heritage - 13044924</string>
    <string name="vukile_langa">Vukile Langa - 14035449</string>
    <string name="nathan_dunkley">Nathan Dunkley - 14145759</string>
    <string name="login">Login</string>
    <string name="up_logo_description">University of pretoria logo</string>
</resources>
